# solanaceae_toxcore

./: CMakeLists.txt  README.md
solanaceae/core/: tox_default_impl.cpp  tox_default_impl.hpp  tox_event_interface.hpp  tox_event_logger.cpp  tox_event_provider_base.cpp  tox_event_provider_base.hpp  tox_interface.hpp  utils.cpp
solanaceae/toxcore/: tox_default_impl.cpp  tox_default_impl.hpp  tox_event_interface.hpp  tox_event_logger.cpp  tox_event_logger.hpp  tox_event_provider_base.cpp  tox_event_provider_base.hpp  tox_interface.cpp  tox_interface.hpp  tox_key.cpp  tox_key.hpp  tox_private_interface.hpp  toxcore_enums.hpp
